# gomonorepo

./: BUILD.bazel  README.md  WORKSPACE  go.mod  user.go  user_test.go
chat/: BUILD.bazel  comment.go  comment_test.go
cmd/svc1/: BUILD.bazel  main.go
cmd/svc2/: BUILD.bazel  main.go
kanban/: BUILD.bazel  task.go  task_test.go
