load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tengis617/gomonorepo
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["user.go"],
    importpath = "github.com/tengis617/gomonorepo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["user_test.go"],
    embed = [":go_default_library"],
)
